fixed links not being wrapped properly

--- a/app/styles/board/post.css
+++ b/app/styles/board/post.css
@@ -68,6 +68,10 @@
   margin: 0;
 }
 
+.post-content a {
+  overflow-wrap: break-word;
+}
+
 .quote {
   display: flex;
   flex-direction: column;
